@@ -236,6 +236,11 @@ jQuery( function ( $ ) {
 		$( '#wcpay_selected_upe_payment_type' ).val( paymentType );
 	};
 
+	// Set the payment country field
+	const setPaymentCountry = ( country ) => {
+		$( '#wcpay_payment_country' ).val( country );
+	};
+
 	/**
 	 * Converts form fields object into Stripe `billing_details` object.
 	 *
@@ -335,6 +340,7 @@ jQuery( function ( $ ) {
 							.isReusable;
 					showNewPaymentMethodCheckbox( isPaymentMethodReusable );
 					setSelectedUPEPaymentType( selectedUPEPaymentType );
+					setPaymentCountry( event.value.country );
 					isUPEComplete = event.complete;
 				} );
 			} )
@@ -455,7 +461,8 @@ jQuery( function ( $ ) {
 				paymentIntentId,
 				orderId,
 				savePaymentMethod,
-				$( '#wcpay_selected_upe_payment_type' ).val()
+				$( '#wcpay_selected_upe_payment_type' ).val(),
+				$( '#wcpay_payment_country' ).val()
 			);
 
 			const { error } = await api.getStripe().confirmPayment( {
