@@ -255,14 +255,15 @@ class WC_Payments_API_Client {
 	/**
 	 * Updates an intention, without confirming it.
 	 *
-	 * @param string $intention_id              - The ID of the intention to update.
-	 * @param int    $amount                    - Amount to charge.
-	 * @param string $currency_code             - Currency to charge in.
-	 * @param bool   $save_payment_method       - Whether to setup payment intent for future usage.
-	 * @param string $customer_id               - Stripe customer to associate payment intent with.
-	 * @param array  $metadata                  - Meta data values to be sent along with payment intent creation.
-	 * @param array  $level3                    - Level 3 data.
-	 * @param string $selected_upe_payment_type - The name of the selected UPE payment type or empty string.
+	 * @param string  $intention_id              - The ID of the intention to update.
+	 * @param int     $amount                    - Amount to charge.
+	 * @param string  $currency_code             - Currency to charge in.
+	 * @param bool    $save_payment_method       - Whether to setup payment intent for future usage.
+	 * @param string  $customer_id               - Stripe customer to associate payment intent with.
+	 * @param array   $metadata                  - Meta data values to be sent along with payment intent creation.
+	 * @param array   $level3                    - Level 3 data.
+	 * @param string  $selected_upe_payment_type - The name of the selected UPE payment type or empty string.
+	 * @param ?string $payment_country           - The payment two-letter iso country code or null.
 	 *
 	 * @return WC_Payments_API_Intention
 	 * @throws API_Exception - Exception thrown on intention creation failure.
@@ -275,7 +276,8 @@ class WC_Payments_API_Client {
 		$customer_id = '',
 		$metadata = [],
 		$level3 = [],
-		$selected_upe_payment_type = ''
+		$selected_upe_payment_type = '',
+		$payment_country = null
 	) {
 		$request = [
 			'amount'      => $amount,
@@ -288,6 +290,9 @@ class WC_Payments_API_Client {
 		if ( '' !== $selected_upe_payment_type ) {
 			// Only update the payment_method_types if we have a reference to the payment type the customer selected.
 			$request['payment_method_types'] = [ $selected_upe_payment_type ];
+		}
+		if ( $payment_country ) {
+			$request['payment_country'] = $payment_country;
 		}
 		if ( $customer_id ) {
 			$request['customer'] = $customer_id;
