@@ -115,6 +115,7 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Update shipping cost in payment sheet when changing payment method.
 * Fix - Transaction search with translated terms
 * Update - Replace REST endpoint for onboarding initialization.
+* Fix - UPE missing international card fees.
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
