@@ -895,6 +895,7 @@ class WC_Payments_API_Client_Test extends WP_UnitTestCase {
 		$expected_amount         = 123;
 		$expected_status         = 'succeeded';
 		$selected_payment_method = 'giropay';
+		$payment_country         = 'US';
 		$save_payment_method     = true;
 		$metadata                = [
 			'customer_name'  => 'Testy Testerson',
@@ -942,6 +943,7 @@ class WC_Payments_API_Client_Test extends WP_UnitTestCase {
 					'level3'               => $level3_data,
 					'description'          => 'Online Payment for Order #' . strval( $metadata['order_id'] ) . ' for ' . str_replace( [ 'https://', 'http://' ], '', $metadata['site_url'] ),
 					'payment_method_types' => [ 'giropay' ],
+					'payment_country'      => 'US',
 					'customer'             => $customer_id,
 					'setup_future_usage'   => 'off_session',
 				]
@@ -982,7 +984,8 @@ class WC_Payments_API_Client_Test extends WP_UnitTestCase {
 			$customer_id,
 			$metadata,
 			$level3_data,
-			$selected_payment_method
+			$selected_payment_method,
+			$payment_country
 		);
 
 		$this->assertEquals( $expected_amount, $result->get_amount() );
